# fastapi_trello

./: .env.example  README.md  main.py  middleware.py  pyproject.toml
app/: __init__.py
app/lanes/: views.py
app/projects/: views.py
app/tasks/: views.py
app/users/: views.py
db/: db.py
migrations/: env.py
migrations/versions/: 66d314a48e35_create_users_table.py  72e8cb0d0a82_user_project_model.py  9f1c64d73769_tasks_migrate.py  a925fbc3c8a3_project_models.py  ea837c94c676_update_project_and_user_model.py  f0e55455bed8_lane_migrate.py
models/: __init__.py  lanes.py  projects.py  tasks.py  user_projects.py  users.py
schemas/: project.py
static/js/: project_actions.js  sortable.js  sweet_alerts.js
templates/: index.html  layout.html
templates/lanes/: index.html
templates/lanes/partials/: lanes_list.html
templates/layouts/: login.html  register.html
templates/projects/partials/: members_manage.html
templates/tasks/partials/: lane_tasks.html  tasks_item.html
templates/users/: edit.html  show.html
utils/: auth.py  flash.py  get_db.py
