[tool.poetry]
name = "fastapi-trello"
version = "0.1.0"
description = ""
authors = ["Jeter Chen <dali1756@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.115.8"
uvicorn = "^0.34.0"
sqlalchemy = "^2.0.38"
python-dotenv = "^1.0.1"
alembic = "^1.14.1"
psycopg = "^3.2.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
