[tool.poetry]
name = "fastapi-trello"
version = "0.1.0"
description = ""
authors = ["Jeter Chen <dali1756@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.115.8"
uvicorn = "^0.34.0"
sqlalchemy = "^2.0.38"
python-dotenv = "^1.0.1"
alembic = "^1.14.1"
psycopg = "^3.2.4"
jinja2 = "^3.1.5"
python-multipart = "^0.0.20"
passlib = "^1.7.4"
python-jose = "^3.3.0"
itsdangerous = "^2.2.0"
bcrypt = "^4.2.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
